hphp/hack/test/typecheck/tconst/generic_tc_invalid1.php.like_types.exp
File "generic_tc_invalid1.php", line 24, characters 11-13:
Some type constraint(s) here are violated (Typing[4062])
File "generic_tc_invalid1.php", line 16, characters 30-31:
'T1' is a constrained type parameter
File "generic_tc_invalid1.php", line 16, characters 74-74:
You are trying to access the member T but this is not an object, it is a dynamic value
File "generic_tc_invalid1.php", line 16, characters 30-31:
Definition is here
